# amici

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/adr/: 0001-extract-shared-model-loading-and-cli-utilities-into-amici-crate.md  0002-evaluation-methodology.md  README.md
src/: cli.rs  eval.rs  lib.rs  logging.rs  migration.rs  model.rs  storage.rs  testing.rs
src/cli/: message.rs  shorthand.rs  spinner.rs
src/eval/: baseline.rs  fixture.rs  pipeline.rs
src/model/: embedder.rs  reranker.rs
src/storage/: filter.rs  fts.rs
src/testing/: hybrid.rs
tests/: eval_smoke.rs
