[package]
name = "amici"
version = "0.1.0"
edition = "2024"
description = "Shared model-loading, storage helpers, and CLI utilities for the sae/yomu/recall toolchain"
license = "MIT"
repository = "https://github.com/thkt/amici"

[dependencies]
rurico   = { git = "https://github.com/thkt/rurico", rev = "3cc9cb0" }
rusqlite = { version = "0.39", features = ["bundled"] }
tracing  = "0.1"

[dev-dependencies]
rurico = { git = "https://github.com/thkt/rurico", rev = "3cc9cb0", features = ["test-support"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# フルパス使用検出
absolute_paths = "deny"
# Rustイディオム (RUST.md idioms table)
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# インポート
wildcard_imports = "deny"
enum_glob_use = "deny"
# 文字列
str_to_string = "deny"
# 引数
needless_pass_by_value = "deny"
