[package]
name = "amici"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Shared model-loading, storage helpers, and CLI utilities for the sae/yomu/recall toolchain"
license = "MIT"
repository = "https://github.com/thkt/amici"

[dependencies]
rurico   = { git = "https://github.com/thkt/rurico", rev = "e5f4fb5" }
rusqlite = { version = "0.39", features = ["bundled"] }
tracing  = "0.1"

[dev-dependencies]
rurico = { git = "https://github.com/thkt/rurico", rev = "e5f4fb5", features = ["test-support"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"
