[package]
name = "amici"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Shared model-loading, storage helpers, and CLI utilities for the sae/yomu/recall toolchain"
license = "MIT"
repository = "https://github.com/thkt/amici"

[features]
test-support = []
eval-harness = []

[[bin]]
name = "eval_harness"
path = "src/bin/eval_harness.rs"
required-features = ["eval-harness"]

[dependencies]
rand               = "0.10"
rand_chacha        = "0.10"
rurico             = { git = "https://github.com/thkt/rurico", rev = "7d668ab" }
rusqlite           = { version = "0.39", features = ["bundled"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rurico      = { git = "https://github.com/thkt/rurico", rev = "7d668ab", features = ["test-support"] }
serial_test = "3"
tempfile    = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"
